added exists and success views for register

--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -19,6 +19,7 @@
 			<input type="email" id="email" name="email" required />
 
 			<button type="submit">Register</button>
+			<a href="/">Login</a>
 		</form>
 	</body>
 </html>
