--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<h1>Login</h1>
-
+		<h3><%= data.message %></h3>
 		<form action="/" method="POST">
 			<label for="username">Username:</label>
 			<input
 				type="text"
 				id="username"
 				name="username"
-				value="<%= loginCredential.username %>"
+				value="<%= data.username %>"
 				required
 			/>
 
@@ -24,7 +24,7 @@
 				type="password"
 				id="password"
 				name="password"
-				value="<%= loginCredential.password %>"
+				value="<%= data.password %>"
 				required
 			/>
 
